--- a/Final.rmd
+++ b/Final.rmd
@@ -1,12 +1,12 @@
 ---
 title: "Covid91 vaccine study FinalFall2022"
-author: "Put your name here!"
+author: "Valerie Rodriguez"
 output: 
   html_document:
     number_sections: true
     toc: true
     toc_depth: 5
-date: "`r Sys.Date()`" 
+date: "Spring 2023" 
 ---
 
 ```{r include=FALSE,echo=FALSE}
