--- a/Final.rmd
+++ b/Final.rmd
@@ -170,13 +170,33 @@ colPerc(table1)
 For this data we can see that 87 vaccinated gays got Covid and 51 did not. While only 13 placebo gays got Covid and 49 did not. Those who were vaccinated were much more likely to get Covid. 3.3% out of 96.7% of vaccinated participants got Covid. 0.54% out of 99.46% of placebo participants didn't get Covid.
 
 
+### Inferential 
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+gaysfish <- fisher.test(table1)
+gaysfish
+```
+
+In these inferential results the p value is 1e-08 which is very small number. This means that the expected results of 29 out of 1442 placebo and 31 out of 1558 vaccinated people getting Covid is unlikely to happen. The observed counts shows that 8 out 1463 placebo participates got Covid while 52 out of 1537 vaccinated people got Covid. The odds ratio in the Fisher test is 0.16 which isn't as in the middle of the confidence interval as the previous subcategories.
 
 
+```{r}
+effect <- gaysfish$p.value/(gaysfish$p.value +1)
+effectivenessgays = gaysfish$estimate/(gaysfish$estimate +1)*100
+print(effectivenessgays)
+```
 
+```{r}
+low=(gaysfish$conf.int[1]/(gaysfish$conf.int[1] +1))*100
+hi=(gaysfish$conf.int[2]/(gaysfish$conf.int[2] +1))*100
+options(digits=2)
+```
 
+## Effectiveness Confidence Interval `r low`  to `r hi`
 
-
-
+If the effectiveness confidence interval is above 50% then we know that the vaccine is effective for this group. For those participants that are gay the effectiveness of the vaccine is 6.2 to 25.61 which is extremely low. This vaccine is ineffective for gays and this aligns with the previous data we saw.
 
 
 ## Druggies
